--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.6.*"
+    "phpunit/phpunit": "4.6.*",
+    "phpdocumentor/phpdocumentor": "2.*"
   },
   "minimum-stability": "dev",
   "autoload": {
