ADD - unittest for PHP 5.3

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   "license": "Proprietary",
   "authors": [
     {
-      "email": "support@payplug.com",
+      "name": "PayPlug",
+      "email": "support@payplug.com"
     }
   ],
   "require": {
