--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "payplug/payplug-php",
-  "description": "PHP client for PayPlug public API!",
+  "description": "A simple PHP library for PayPlug public API.",
   "version": "2.1.0",
   "type": "library",
   "homepage": "https://www.payplug.com",
@@ -23,6 +23,6 @@
   },
   "minimum-stability": "dev",
   "autoload": {
-    "psr-4": {"Payplug\\": "lib/"}
+    "psr-4": {"\\": "lib/Payplug"}
   }
 }
