- Add support for Customer/Cards. - Add LICENCE file (#4) - Version 2.3.0 - Drop 'data' key in object collections - Abort on payment object directly.

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
   "name": "payplug/payplug-php",
   "description": "A simple PHP library for PayPlug public API.",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "type": "library",
   "homepage": "https://www.payplug.com",
   "time": "2015-05-06",
-  "license": "Proprietary",
+  "license": "MIT",
   "authors": [
     {
       "name": "PayPlug",
