Use travis new named cache feature.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ php:
   - '7.0'
 
 env:
-  - CURL=7.21.7
-  - CURL=7.35.0
-  - CURL=7.40.0
-  - CURL=7.45.0
-  - CURL=7.48.0
+  - CURL=7.21.7 CACHE_NAME=CURL_7217
+  - CURL=7.35.0 CACHE_NAME=CURL_7350
+  - CURL=7.40.0 CACHE_NAME=CURL_7400
+  - CURL=7.45.0 CACHE_NAME=CURL_7450
+  - CURL=7.48.0 CACHE_NAME=CURL_7480
 
 cache:
   timeout: 1000
