--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ matrix:
   fast_finish: true
 
 before_script:
+  - apt install -y autoconf2.13
   - PHP_AUTOCONF=autoconf2.13
   - PHP_VERSION=$(php -r "echo phpversion();")
   - ./tests/ci_tools/get_php_curl.sh "$CURL" "$PHP_VERSION"
