--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ matrix:
   include:
   - php: '5.3'
     dist: precise
-    sudo: false
+  - php: '5.4'
+    dist: trusty
+  - php: '5.5'
+    dist: trusty
 
 before_script:
   - curl -sS https://getcomposer.org/installer | php
