--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,10 +9,15 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu:16.04
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Setup PHP with PECL extension
+      uses: shivammathur/setup-php@v2
+      with: 
+        php-version: '7.4'
 
     - name: Validate composer.json and composer.lock
       run: composer validate
