--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['5.6' , '7', '8']
+        php-versions: ['5.6' , '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
+        phpunit-versions: ['latest']
 
     steps:
     - uses: actions/checkout@v2
@@ -21,22 +22,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with: 
         php-version: ${{ matrix.php-versions }}
-
-    - name: Validate composer.json and composer.lock
-      run: composer validate
-
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
+        tools: phpunit:${{ matrix.phpunit-versions }}
     
     - name: php version
       run: php -v
