fix phpunit version cmd

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,7 +30,7 @@ jobs:
       run: php -v
 
     - name: phpunit version
-      run: phpunit -v
+      run: phpunit --version
 
     - name: Run test suite
       run: phpunit --bootstrap tests/config.php tests
