--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,6 +1,14 @@
 name: PHP Composer
 
-on: [push]
+on:
+  push:
+    branches: 
+      - master
+      - 'develop'
+  pull_request:
+    branches: 
+      - master
+      - 'develop'
 
 jobs:
   tests_unit:
