--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: 
       - master
-      - 'develop'
+      - develop
   pull_request:
     branches: 
       - master
-      - 'develop'
+      - develop
 
 jobs:
   tests_unit:
