--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.6.*",
-    "phpdocumentor/phpdocumentor": "2.*"
+    "phpunit/phpunit": "5.7.*",
+    "phpdocumentor/phpdocumentor": "2.*",
+    "symfony/dotenv": "3.4.*"
   },
   "minimum-stability": "stable",
   "autoload": {
