Retrieve the route from .env outside the module using server variable

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,4 +38,5 @@ jobs:
       run: php -v
 
     - name: Run test suite
-      run: phpunit --bootstrap tests/config.php tests
+      run: phpunit --bootstrap tests/config.php tests --configuration tests/phpunit.xml
+
