--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
   "require": {
     "php": ">=5.3.0",
     "ext-openssl": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "symfony/dotenv": "3.4.*"
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.*",
-    "phpdocumentor/phpdocumentor": "2.*",
-    "symfony/dotenv": "3.4.*"
+    "phpdocumentor/phpdocumentor": "2.*"
   },
   "minimum-stability": "stable",
   "autoload": {
