--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
   "require": {
     "php": ">=5.3.0",
     "ext-openssl": "*",
-    "ext-curl": "*",
-    "symfony/dotenv": "3.4.*"
+    "ext-curl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.*",
