--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "ext-openssl": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-openssl": "*"
+
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.*",
