--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -49,7 +49,7 @@ jobs:
         - name: Test
           run: |
             echo  $RELEASE_VERSION
-            sed -i 's/"version": "*.*"/"version": "${{ env.RELEASE_VERSION }}"/' version.json
+            sed -i 's/"LIBRARY_VERSION": "*.*"/"version": "${{ env.RELEASE_VERSION }}"/' Config.php
             git config --global user.email "ilajili@payplug.com"
             git config --global user.name "ilajili"
             git remote set-url origin https://github.com/payplug/payplug-php
