--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,6 @@
 name: PHP Composer
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 on:
   push:
@@ -44,15 +46,16 @@ jobs:
       runs-on: ubuntu-18.04
       steps:
         - uses: actions/checkout@master
+          with:
+            token: ${{ secrets.GITHUB_TOKEN}}
         - name: Get the version
           run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         - name: Test
           run: |
             echo  $RELEASE_VERSION
             sed -i "s/LIBRARY_VERSION = '*.*.*'/LIBRARY_VERSION = '${{ env.RELEASE_VERSION }}'/" lib/Payplug/Core/Config.php
-            git config --global user.email "ilajili@payplug.com"
-            git config --global user.name "ilajili"
-            git remote set-url origin https://github.com/payplug/payplug-php
+            git config user.email actions@github.com
+            git config user.name "GitHub Actions"
             git add .
-            git commit -m "update version"
+            git commit -m "[Automated Release Action]"
             git push origin HEAD:test-tag
