--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,16 +1,14 @@
 name: PHP Composer
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 on:
   push:
-    branches: 
-      - test-tag
-    tags:
-      - "*"
+    branches:
+      - master
+      - develop
   pull_request:
-    branches: 
-      - test-tag
+    branches:
+      - master
+      - develop
 
 jobs:
   tests_unit:
@@ -21,41 +19,23 @@ jobs:
         php-versions: ['7.3', '7.4', '8.0']
         phpunit-versions: ['8.5.15']
         include:
-        - php-versions: '5.6'
-          phpunit-versions: '5.7.27'
-        - php-versions: '7.0'
-          phpunit-versions: '6.5.14'
-    
+          - php-versions: '5.6'
+            phpunit-versions: '5.7.27'
+          - php-versions: '7.0'
+            phpunit-versions: '6.5.14'
+
     name: Php Version ${{matrix.php-versions }} / php Unit ${{ matrix.phpunit-versions }}
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Setup PHP with PECL extension
-      uses: shivammathur/setup-php@v2
-      with: 
-        php-version: ${{ matrix.php-versions }}
-        tools: phpunit:${{ matrix.phpunit-versions }}
-    
-    - name: php version
-      run: php -v
+      - uses: actions/checkout@v2
 
-    - name: Run test suite
-      run: phpunit --bootstrap tests/config.php tests --configuration tests/phpunit.xml
+      - name: Setup PHP with PECL extension
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+          tools: phpunit:${{ matrix.phpunit-versions }}
 
-  update_lib_version:
-      runs-on: ubuntu-18.04
-      steps:
-        - uses: actions/checkout@master
-          with:
-            token: ${{ secrets.GITHUB_TOKEN}}
-        - name: Get the version
-          run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        - name: Test
-          run: |
-            echo  $RELEASE_VERSION
-            sed -i "s/LIBRARY_VERSION = '*'/LIBRARY_VERSION = '${{ env.RELEASE_VERSION }}'/" lib/Payplug/Core/Config.php
-            git config user.email actions@github.com
-            git config user.name "GitHub Actions"
-            git add .
-            git commit -m "[Automated Release Action]"
-            git push origin HEAD:test-tag
+      - name: php version
+        run: php -v
+
+      - name: Run test suite
+        run: phpunit --bootstrap tests/config.php tests --configuration tests/phpunit.xml
