--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - master
       - develop
+      - test-tag
   pull_request:
     branches:
       - master
       - develop
+      - test-tag
 
 jobs:
   tests_unit:
