--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
       - completed
 jobs:
 
-  update_lib_version:
+  on-success:
 
     runs-on: ubuntu-18.04
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -30,7 +30,7 @@ jobs:
           git commit -m "[Automated Release Action]"
           git push origin HEAD:test-tag
 
-  release_has_failed:
+  on-failure:
 
       runs-on: ubuntu-18.04
       if: ${{ github.event.workflow_run.conclusion == 'failure' }}
