--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -46,7 +46,7 @@ jobs:
 
     runs-on: ubuntu-18.04
     needs: tests_unit
-    if: startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@master
         with:
