--- a/.github/workflows/payplug-ci.yml
+++ b/.github/workflows/payplug-ci.yml
@@ -18,13 +18,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['7.3', '7.4', '8.0']
-        phpunit-versions: ['8.5.15']
+        php-versions: ['7.3', '7.4', '8.0','8.1']
+        phpunit-versions:
+          - '8.5.15'
+          - '9.0'
+
         include:
         - php-versions: '5.6'
           phpunit-versions: '5.7.27'
         - php-versions: '7.0'
           phpunit-versions: '6.5.14'
+
     
     name: Php Version ${{matrix.php-versions }} / php Unit ${{ matrix.phpunit-versions }}
     steps:
