PRE-2607: check if secret key is empty

--- a/.github/workflows/payplug-ci.yml
+++ b/.github/workflows/payplug-ci.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           projectBaseDir: .
           args: >
-            -Dsonar.organization=${{ secrets.SONAR_ORGA }}
+            -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=github-payplug-payplug-php
             -Dsonar.sources=lib/
             -Dsonar.test.exclusions=tests/**
