--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.*",
-    "phpdocumentor/phpdocumentor": "2.*"
+    "phpdocumentor/phpdocumentor": "2.*",
+    "rector/rector": "^1.2"
   },
   "minimum-stability": "stable",
   "autoload": {
