chore: claim ownership

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
     {
       "name": "PayPlug",
       "email": "support@payplug.com"
+    },
+    {
+      "name": "Daniel FLOREZ MURILLO",
+      "email": "dmurillo@payplug.com"
     }
   ],
   "require": {
